--- a/3rdParty/bzip2/CMakeLists.txt
+++ b/3rdParty/bzip2/CMakeLists.txt
@@ -1,10 +1,9 @@
 include(functions/FetchContent_ExcludeFromAll_backport)
 
 include(FetchContent)
-FetchContent_Declare(
-    bzip2
-    URL https://github.com/libarchive/bzip2/archive/refs/tags/bzip2-1.0.8.tar.gz
-    URL_HASH SHA256=db106b740252669664fd8f3a1c69fe7f689d5cd4b132f82ba82b9afba27627df
+FetchContent_Declare_ExcludeFromAll(bzip2
+    URL https://sourceware.org/pub/bzip2/bzip2-1.0.8.tar.gz
+    URL_HASH MD5=67e051268d0c475ea773822f7500d0e5
 )
 FetchContent_MakeAvailable_ExcludeFromAll(bzip2)
 
